--- a/web/styles/left_sidebar.css
+++ b/web/styles/left_sidebar.css
@@ -1076,8 +1076,23 @@ li.active-sub-filter {
                    the icon width (15px/2) plus 2px. This keeps the
                    unread dot in correct proximity to the view icon,
                    no matter how the row flexes or what information-
-                   density values a user has set. 9.5px at 12px/1em. */
-                transform: translateX(0.7917em);
+                   density values a user has set. 9.5px at 12px/1em.
+
+                   We set this and its scaled counterpart as variables
+                   for use in the pulse-unread animation to maintain the
+                   dot's correct position relative to the view icon. */
+                --unread-dot-x-offset: 0.7917em;
+                /* To make sure the unread dot appears to scale from the
+                   offset dot's center in collapsed Views, we need to
+                   adjust the translateX offset by the same amount we
+                   scale. calc() does not play nicely with animations,
+                   so it's critical that we calculate this value here,
+                   well before its needed. */
+                --unread-dot-x-offset-scaled: calc(
+                    var(--unread-dot-x-offset) / var(--pulse-unread-scale-max)
+                );
+
+                transform: translateX(var(--unread-dot-x-offset));
                 width: 0.5em;
                 height: 0.5em;
                 padding: 0;
